Factory pulled out from Listener. New PairFactory interface.